# slsDetectorPackage

./: CMakeLists.txt
slsDetectorCalibration/: NewMythenMacros.C  NewMythenMacros.h  energyCalibration.cpp
slsDetectorGui/: CMakeLists.txt
slsDetectorServers/eigerDetectorServer/: slsDetectorFunctionList.c
slsDetectorServers/slsDetectorServer/src/: slsDetectorServer_funcs.c
slsDetectorSoftware/: CMakeLists.txt
slsDetectorSoftware/multiSlsDetector/: multiSlsDetector.cpp
slsDetectorSoftware/slsDetector/: slsDetector.cpp  slsDetectorUsers.cpp  slsDetectorUsers.h
slsDetectorSoftware/slsDetectorAnalysis/: energyConversion.cpp
slsDetectorSoftware/slsDetectorClient/: CMakeLists.txt
slsDetectorSoftware/src/: Detector.cpp  DetectorImpl.cpp  Module.cpp
slsReceiverSoftware/: CMakeLists.txt
slsReceiverSoftware/include/: AutoPtr.h  DataProcessor.h  DataStreamer.h  Fifo.h  FrameAssembler.h  GeneralData.h  Listener.h  MmappedRegion.h  Stats.h  ThreadObject.h  ThreadUtils.h  Timestamp.h  UDPBaseImplementation.h  UDPInterface.h  UDPStandardImplementation.h  circularFifo.h  genericSocket.h  slsReceiver.h  slsReceiverTCPIPInterface.h  slsReceiverUsers.h  sls_receiver_defs.h
slsReceiverSoftware/include/sls/: Receiver.h
slsReceiverSoftware/src/: ClientInterface.cpp  ClientInterface.h  DataProcessor.cpp  DataProcessor.h  DataStreamer.cpp  Fifo.cpp  FrameAssembler.cpp  FrameAssembler.h  FrameAssemblerEiger.cxx  FrameAssemblerEiger.hxx  FrameAssemblerGotthard.hxx  FrameAssemblerJungfrau.cxx  FrameAssemblerJungfrau.hxx  GeneralData.h  Implementation.cpp  Implementation.h  Listener.cpp  Listener.h  MmappedRegion.cpp  MmappedRegion.cxx  MmappedRegion.h  Receiver.cpp  Stats.h  ThreadObject.cpp  ThreadObject.h  UDPBaseImplementation.cpp  UDPStandardImplementation.cpp  slsReceiver.cpp  slsReceiverTCPIPInterface.cpp  slsReceiverUsers.cpp
slsSupportLib/: CMakeLists.txt
slsSupportLib/include/sls/: Geometry.h  UdpRxSocket.h  sls_detector_defs.h  versionAPI.h
slsSupportLib/src/: UdpRxSocket.cpp  geometry_assembler.cpp
slsSupportLib/tests/: CMakeLists.txt  test-Geometry.cpp
